Added: simple logs to gateway; Fixed cards (deleted patient dependence), workers; Refactored med.proto
