# med/internal/controller/card/card.go
@@ -46,20 +46,12 @@ func (s *Server) GetCards(ctx context.Context, request *pb.GetCardsRequest) (*pb
 	}
 	for _, cardInfo := range cardList.Cards {
 		cardResponse := &pb.Card{
-			Id:              cardInfo.Card.ID.String(),
-			AppointmentTime: cardInfo.Card.AppointmentTime,
-			HasNodules:      cardInfo.Card.HasNodules,
-			Diagnosis:       cardInfo.Card.Diagnosis,
-			Patient: &pb.Patient{
-				Id:            cardInfo.Patient.ID.String(),
-				FirstName:     cardInfo.Patient.FirstName,
-				LastName:      cardInfo.Patient.LastName,
-				FatherName:    cardInfo.Patient.FatherName,
-				MedicalPolicy: cardInfo.Patient.MedicalPolicy,
-				Email:         cardInfo.Patient.Email,
-				IsActive:      cardInfo.Patient.IsActive,
-			},
-			MedWorkerId: cardInfo.Card.MedWorkerID.String(),
+			Id:              cardInfo.ID.String(),
+			AppointmentTime: cardInfo.AppointmentTime,
+			HasNodules:      cardInfo.HasNodules,
+			Diagnosis:       cardInfo.Diagnosis,
+			PatientId:       cardInfo.PatientID.String(),
+			MedWorkerId:     cardInfo.MedWorkerID.String(),
 		}
 		response.Results = append(response.Results, cardResponse)
 	}
@@ -68,26 +60,15 @@ func (s *Server) GetCards(ctx context.Context, request *pb.GetCardsRequest) (*pb
 }
 
 func (s *Server) PostCard(ctx context.Context, request *pb.PostCardRequest) (*pb.PostCardResponse, error) {
-	uuid1, _ := uuid.Parse(request.Patient.Id)
+	uuid1, _ := uuid.Parse(request.PatientId)
 	uuid2, _ := uuid.Parse(request.MedworkerId)
-	cardInfo := &entity.PatientInformation{
-		Patient: &entity.Patient{
-			ID:            uuid1,
-			FirstName:     request.Patient.FirstName,
-			LastName:      request.Patient.LastName,
-			FatherName:    request.Patient.FatherName,
-			MedicalPolicy: request.Patient.MedicalPolicy,
-			Email:         request.Patient.Email,
-			IsActive:      request.Patient.IsActive,
-		},
-		Card: &entity.PatientCard{
-			HasNodules:  request.HasNodules,
-			Diagnosis:   request.Diagnosis,
-			PatientID:   uuid1,
-			MedWorkerID: uuid2,
-		},
+	card := &entity.PatientCard{
+		HasNodules:  request.HasNodules,
+		Diagnosis:   request.Diagnosis,
+		PatientID:   uuid1,
+		MedWorkerID: uuid2,
 	}
-	err := s.cardUseCase.PostCard(ctx, cardInfo)
+	err := s.cardUseCase.PostCard(ctx, card)
 	if err != nil {
 		if errors.Is(err, entity.ErrNotFound) {
 			return nil, status.Error(codes.Internal, err.Error())
@@ -108,20 +89,12 @@ func (s *Server) GetCardByID(ctx context.Context, request *pb.GetCardByIDRequest
 	}
 	response := &pb.GetCardByIDResponse{
 		Postcard: &pb.Card{
-			Id:              CardInfo.Card.ID.String(),
-			AppointmentTime: CardInfo.Card.AppointmentTime,
-			HasNodules:      CardInfo.Card.HasNodules,
-			Diagnosis:       CardInfo.Card.Diagnosis,
-			Patient: &pb.Patient{
-				Id:            CardInfo.Patient.ID.String(),
-				FirstName:     CardInfo.Patient.FirstName,
-				LastName:      CardInfo.Patient.LastName,
-				FatherName:    CardInfo.Patient.FatherName,
-				MedicalPolicy: CardInfo.Patient.MedicalPolicy,
-				Email:         CardInfo.Patient.Email,
-				IsActive:      CardInfo.Patient.IsActive,
-			},
-			MedWorkerId: CardInfo.Card.MedWorkerID.String(),
+			Id:              CardInfo.ID.String(),
+			AppointmentTime: CardInfo.AppointmentTime,
+			HasNodules:      CardInfo.HasNodules,
+			Diagnosis:       CardInfo.Diagnosis,
+			PatientId:       CardInfo.PatientID.String(),
+			MedWorkerId:     CardInfo.MedWorkerID.String(),
 		},
 	}
 	return response, nil
